--- a/spring2018/labs/lab3/A_Basin/A_Basin/Base.lproj/Main.storyboard
+++ b/spring2018/labs/lab3/A_Basin/A_Basin/Base.lproj/Main.storyboard
@@ -112,15 +112,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fw4-mk-Esj">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="283"/>
                             </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Q7R-7Y-BUc">
+                                <rect key="frame" x="20" y="347" width="335" height="300"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="HCv-wm-CMb"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="kXk-UL-kXK" firstAttribute="bottom" secondItem="Fw4-mk-Esj" secondAttribute="bottom" id="3KB-6k-e28"/>
-                            <constraint firstItem="kXk-UL-kXK" firstAttribute="trailing" secondItem="Fw4-mk-Esj" secondAttribute="trailing" id="B1i-rE-pk5"/>
-                            <constraint firstItem="Fw4-mk-Esj" firstAttribute="top" secondItem="kXk-UL-kXK" secondAttribute="top" id="XYB-HG-k7O"/>
-                            <constraint firstItem="Fw4-mk-Esj" firstAttribute="leading" secondItem="kXk-UL-kXK" secondAttribute="leading" id="gTW-3b-fbY"/>
+                            <constraint firstItem="kXk-UL-kXK" firstAttribute="bottom" secondItem="Q7R-7Y-BUc" secondAttribute="bottom" constant="20" id="EH0-SR-Aua"/>
+                            <constraint firstItem="Q7R-7Y-BUc" firstAttribute="top" secondItem="Fw4-mk-Esj" secondAttribute="bottom" id="Gc6-7z-JuR"/>
+                            <constraint firstItem="Fw4-mk-Esj" firstAttribute="top" secondItem="kXk-UL-kXK" secondAttribute="top" id="NiZ-xd-DhQ"/>
+                            <constraint firstItem="Fw4-mk-Esj" firstAttribute="trailing" secondItem="kXk-UL-kXK" secondAttribute="trailing" id="eSW-8v-SrR"/>
+                            <constraint firstItem="kXk-UL-kXK" firstAttribute="trailing" secondItem="Q7R-7Y-BUc" secondAttribute="trailing" constant="20" id="hrk-8F-G6J"/>
+                            <constraint firstItem="Fw4-mk-Esj" firstAttribute="leading" secondItem="kXk-UL-kXK" secondAttribute="leading" id="l2a-NM-LeW"/>
+                            <constraint firstItem="Q7R-7Y-BUc" firstAttribute="leading" secondItem="kXk-UL-kXK" secondAttribute="leading" constant="20" id="wiK-jC-MPV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kXk-UL-kXK"/>
                     </view>
@@ -132,12 +145,13 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="imageInfoLabel" destination="Q7R-7Y-BUc" id="a04-86-DgA"/>
                         <outlet property="imageView" destination="Fw4-mk-Esj" id="j1l-vS-6NB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ue5-MI-1d8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1204" y="150"/>
+            <point key="canvasLocation" x="1204" y="149.77511244377811"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0Gr-jW-5nY">
